# hermes-plugin-kit

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
hermes_plugin_kit/: __init__.py
tests/: test_hermes_contract.py  test_kit.py
