[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-plugin-kit"
version = "0.1.0"
description = "Convention-correct tool registration for hermes-agent plugins."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Offending Commit", email = "offendingcommit@gmail.com" }]
keywords = ["hermes", "hermes-agent", "plugin", "llm-tools"]

[project.urls]
Repository = "https://github.com/offendingcommit/hermes-plugin-kit"

[tool.setuptools]
packages = ["hermes_plugin_kit"]
