# Dependency manifest for hermes-plugin-kit (uv-native, GitOps source of truth).
# Unlike the path-loaded plugins, this IS an installable library: consuming
# plugins add it as a dependency (private git source) and import it. So it keeps
# a build-system and stays buildable; it is not `package = false`.
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-plugin-kit"
version = "0.3.0"
description = "Convention-correct lifecycle registration for hermes-agent plugins."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Offending Commit", email = "offendingcommit@gmail.com" }]
keywords = ["hermes", "hermes-agent", "plugin", "llm-tools"]
dependencies = []

[project.urls]
Repository = "https://github.com/offendingcommit/hermes-plugin-kit"

# Runtime stays dependency-free. PyYAML is dev-only: the hermes contract tests
# import hermes_cli.plugins, which transitively needs yaml. Skipped without it.
[dependency-groups]
dev = ["pyyaml"]

[tool.setuptools]
packages = ["hermes_plugin_kit"]
